<resources>
    <string name="app_name">Timetable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="required">Required*</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
</resources>