<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/logo_sky"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/edit_task_view"
            android:layout_width="122dp"
            android:layout_height="118dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_circle_stroke"
            android:padding="15dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.164" />

        <TextView
            android:id="@+id/edit_task_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Details of your task"
            android:textColor="@color/sky_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_task_view" />

        <View
            android:id="@+id/view"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_left_panel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/task_back"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back_white"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Scroll view-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".75"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_top_corner"
            android:backgroundTint="@color/logo_sky"
            android:paddingTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/edit_task_box_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/task_title_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_title_gray"
                        android:drawableLeft="@drawable/ic_title_gray"
                        android:drawableTint="@color/logo_sky"
                        android:background="@drawable/shape_text_view"
                        android:text="@string/title"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/task_description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_description_gray"
                        android:drawableLeft="@drawable/ic_description_gray"
                        android:drawableTint="@color/logo_sky"
                        android:background="@drawable/shape_text_view"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/task_title_tv" />

                    <TextView
                        android:id="@+id/task_day_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_day_gray"
                        android:drawableLeft="@drawable/ic_day_gray"
                        android:drawableTint="@color/logo_sky"
                        android:background="@drawable/shape_text_view"
                        android:text="@string/day"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/task_description_tv" />

                    <TextView
                        android:id="@+id/task_time_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="16dp"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/ic_time_white"
                        android:drawableLeft="@drawable/ic_time_white"
                        android:drawableTint="@color/logo_sky"
                        android:background="@drawable/shape_text_view"
                        android:text="@string/time"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/task_day_tv" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>